<resources>
    <string name="app_name">FamSafety</string>
    <string name="security">Security</string>
    <string name="sos">SOS</string>
    <string name="sos_text">In case of emergency,keep telling family members to contact me</string>
    <string name="guard_text">Open when you are on a potentially dangerous journey</string>
    <string name="guard">GUARD</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="Guard">Guard</string>
    <string name="profile">Profile</string>
    <string name="my_family">My Family</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Dashboard">Dashboard</string>
    <string name="user">User</string>
    <string name="continue_with_google" />
    <string name="default_web_client_id_auth">837889080262-0trkip00tep2dbq3fh0f6pd51en0mh2u.apps.googleusercontent.com</string>
</resources>