<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_margin="16dp"
        android:textSize="@dimen/dimen_16sp"
        android:text="@string/security"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.card.MaterialCardView
        app:cardBackgroundColor="@color/pink"
        app:cardElevation="@dimen/dimen_16"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:id="@+id/pink_card"
        app:cardCornerRadius="16dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/title">

    </com.google.android.material.card.MaterialCardView>
    <TextView
        app:layout_constraintTop_toTopOf="@id/pink_card"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:id="@+id/text_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:text="@string/sos"/>
    <TextView
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintEnd_toStartOf="@id/sos_img"
        android:layout_margin="16dp"
        android:layout_width="0dp"
        android:text="@string/sos_text"
        android:id="@+id/sos_msg"
        app:layout_constraintTop_toBottomOf="@id/text_sos"
        android:textColor="#fff"
        android:elevation="16dp"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/sos_img"
        android:layout_width="96dp"
        android:src="@drawable/ic_soss"
        android:elevation="16dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        android:layout_height="96dp"/>

    <com.google.android.material.card.MaterialCardView
        app:cardBackgroundColor="@color/green"
        app:cardElevation="@dimen/dimen_16"
        app:layout_constraintTop_toBottomOf="@id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_180"
        android:id="@+id/green_card"
        app:cardCornerRadius="16dp"
        android:layout_margin="16dp"/>
    <TextView
        app:layout_constraintTop_toTopOf="@id/green_card"
        app:layout_constraintStart_toStartOf="@id/green_card"
        android:layout_margin="@dimen/dimen_16"
        android:elevation="@dimen/dimen_16"
        android:id="@+id/text_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:textSize="@dimen/dimen_24sp"
        android:text="@string/guard"/>
    <TextView
        app:layout_constraintStart_toStartOf="@id/green_card"
        android:layout_margin="16dp"
        android:layout_width="@dimen/dimen_0"
        android:text="@string/guard_text"
        android:id="@+id/guard_msg"
        app:layout_constraintTop_toBottomOf="@id/text_guard"
        android:textColor="#fff"
        app:layout_constraintEnd_toStartOf="@id/guard_img"
        android:elevation="16dp"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/guard_img"
        android:layout_width="@dimen/dimen_96"
        android:src="@drawable/ic_guardd"
        android:elevation="16dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        android:layout_height="96dp"/>
    <EditText
        android:id="@+id/invite_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:textColor="@color/black"
        android:hint="Enter Email of whom you want to invite"
        app:layout_constraintBottom_toBottomOf="@id/send_invite"
        app:layout_constraintEnd_toStartOf="@id/send_invite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/send_invite" />

    <Button
        android:id="@+id/send_invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Invite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/green_card" />

    <TextView
        android:id="@+id/your_invites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:text="Your Invites : "
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/invite_mail" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/invite_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dimen_16"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_invites"
        tools:listitem="@layout/item_invite_mail" />


</androidx.constraintlayout.widget.ConstraintLayout>